Change from Plasma::PopupApplet to Plasma::Applet and use Plasma::IconWidget for the icon

This ensures proper icon painting when the plasmoid is put in panels

Reviewed-by: David Edmundson
REVIEW: 104675
BUG: 292476